# taurvia

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: desktop-build.yml
apps/desktop/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/src/: App.tsx  bindings.ts  index.css  router.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: balances.rs  config.rs  mod.rs  send.rs  swap.rs  wallet.rs
apps/desktop/src/components/: BrandMark.tsx  MaskedPhrase.tsx  PageHeader.tsx  PasswordRequirements.tsx  SelectDropdown.tsx  TokenDropdown.tsx
apps/desktop/src/components/layout/: MainLayout.tsx
apps/desktop/src/components/ui/: button.tsx  card.tsx  checkbox.tsx  dialog.tsx  input.tsx  misc.tsx  tabs.tsx  toast.tsx
apps/desktop/src/context/: WalletContext.tsx
apps/desktop/src/lib/: appView.ts  autoLock.ts  explorer.ts  network.ts  password.ts  recoveryPhrase.ts  settingsNav.ts  tauri.ts  tokenCatalog.ts  utils.ts
apps/desktop/src/pages/: ActivityPage.tsx  DashboardPage.tsx  ManageAccountsPage.tsx  ReceivePage.tsx  SendPage.tsx  SettingsPage.tsx  SwapPage.tsx  UnlockPage.tsx
apps/desktop/src/pages/onboarding/: ConfirmSeedPage.tsx  CreateImportPage.tsx  ImportBackupPage.tsx  SetPasswordPage.tsx  ShowSeedPage.tsx  WalletReadyPage.tsx  WelcomePage.tsx
crates/aegis-solana/: Cargo.toml
crates/aegis-solana/src/: jupiter.rs  keypair.rs  lib.rs  price.rs  rpc.rs  token_metadata.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: activity.rs  config.rs  error.rs  lib.rs  send.rs  snapshot.rs  swap.rs  token.rs  wallet.rs
crates/solana/: Cargo.toml
crates/solana/src/: keypair.rs  rpc.rs
crates/storage/: Cargo.toml
crates/storage/src/: device_secret.rs  lib.rs
crates/taurvia-solana/: Cargo.toml
crates/taurvia-solana/src/: jupiter.rs  keypair.rs  lib.rs  price.rs  rpc.rs  swap.rs  token_metadata.rs  transfer.rs
crates/wallet-core/: Cargo.toml
crates/wallet-core/src/: balances.rs  lib.rs  send.rs  session.rs  swap.rs  wallet_file.rs
crates/wallet_core/: Cargo.toml
doc/: CHANGELOG.md  SECURITY.md
