[package]
name = "aegis-solana"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
models = { path = "../models" }
anyhow.workspace = true
base64.workspace = true
bip39.workspace = true
rand.workspace = true
solana-account-decoder = { version = "4.1.1", features = ["agave-unstable-api"] }
solana-client.workspace = true
solana-commitment-config.workspace = true
solana-derivation-path = "3.0.0"
solana-native-token = "3.0.0"
solana-program-pack = "3.1.0"
solana-sdk.workspace = true
solana-system-interface = { version = "3.2.0", features = ["bincode"] }
solana-transaction-status-client-types = { version = "4.1.1", features = ["agave-unstable-api"] }
spl-associated-token-account-interface.workspace = true
spl-token-interface.workspace = true
rayon = "1.12"
