[package]
name = "wallet-core"
version = "0.1.2"
edition.workspace = true
license.workspace = true

[dependencies]
aegis-solana = { path = "../aegis-solana" }
crypto = { path = "../crypto" }
models = { path = "../models" }
storage = { path = "../storage" }
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
