[package]
name = "wallet-core"
version = "0.4.0"
edition.workspace = true
license.workspace = true

[dependencies]
taurvia-solana = { path = "../taurvia-solana" }
crypto = { path = "../crypto" }
models = { path = "../models" }
storage = { path = "../storage" }
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3.27.0"
