[package]
name = "aegis-desktop"
version = "0.1.0"
description = "Aegis Solana Desktop Wallet"
authors = ["you"]
edition.workspace = true
license.workspace = true

[lib]
name = "aegis_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
wallet-core = { path = "../../../crates/wallet-core" }
models = { path = "../../../crates/models" }
tauri = { version = "2.11.5", features = [] }
