[package]
name = "aegis-desktop"
version = "0.1.2"
description = "Aegis Solana Desktop Wallet"
authors = ["you"]
edition.workspace = true
license.workspace = true

[lib]
name = "aegis_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
wallet_core = { path = "../../../crates/wallet_core" }
models = { path = "../../../crates/models" }
tauri = { version = "2.11.5", features = [] }
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta = { version = "2.0.0-rc.22", features = ["derive", "function"] }
specta-typescript = "0.0.9"
