[package]
name = "taurvia-desktop"
version = "0.4.3"
description = "Taurvia Solana Desktop Wallet"
authors = ["you"]
edition.workspace = true
license.workspace = true

[lib]
name = "taurvia_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
wallet-core = { path = "../../../crates/wallet-core" }
models = { path = "../../../crates/models" }
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta = { version = "2.0.0-rc.22", features = ["derive", "function"] }
specta-typescript = "0.0.9"
